# TextSmith2

./: .gitignore  5th.cpp  5th.h  AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  Documentation.html  EBookExporter.cpp  EBookExporter.h  EasySpelling.cpp  EasySpelling.h  EpubBuilder.cpp  EpubBuilder.h  ExportDialog.cpp  ExportDialog.h  ExportDialog.ui  Exporter.h  FullScreenDialog.cpp  FullScreenDialog.h  FullScreenDialog.ui  Gitub_Build.yaml.txt  HelpDialog.cpp  HelpDialog.h  HelpDialog.ui  HtmlExporter.cpp  HtmlExporter.h  ItemDescriptionDialog.cpp  ItemDescriptionDialog.h  ItemDescriptionDialog.ui  Main.cpp  Main.h  Main.ui  MarkdownExporter.cpp  MarkdownExporter.h  Novel.cpp  Novel.h  PageSetupDialog.cpp  PageSetupDialog.h  PageSetupDialog.ui  (+47 more)
.qtcreator/: TextSmith.pro.user.loki  TextSmith2.pro.user.asgard
config/: config.xml  controller.qs  style.css
html2md-main/include/: html2md.h
html2md-main/src/: html2md.cpp  table.cpp
repo/: Updates.xml
scripts/: tools.5th  wordFrequency.5th
